# wot_ai

./: .gitignore  AGENTS.md  GETTING_STARTED.md  PROJECT_OVERVIEW.md  README.md  build_exe.py  build_single_exe.py  build_xmake.bat  build_xmake.sh  demo.py  install_xmake.bat  install_xmake.ps1  pyproject.toml  requirements.txt  wot-robot.spec  xmake.lua  打包成exe.bat
.cursor/plans/: -2c1e2e75.plan.md  -a97a6cd3.plan.md  -da8a2687.plan.md  Cost A.plan.md  data-collection-c6657c5e.plan.md  fix_battle_state_flow_d1a280a7.plan.md  navigation-cc9380b9.plan.md  navigation-optimization.plan.md  remove_taskmanager_refactor_06026769.plan.md  statemachine-6fed441c.plan.md  tank-d9a853db.plan.md  ui-84e07709.plan.md
config/: AGENTS.md  config.yaml  config.yaml.template
data_collection/: async_frame_saver.py  build.py  game_state_detector.py  global_hotkey.py  main.py  record_gameplay.py  requirements.txt
data_collection/capture/: dxcam_capture.py  mss_capture.py
data_collection/configs/: client_config.yaml
data_collection/core/: config_manager.py  factory.py  recording_loop.py  screen_capture.py
data_collection/detection/: yolo_state_detector.py
data_collection/listeners/: __init__.py  global_listener.py  pynput_listener.py
data_collection/save/: __init__.py  async_frame_saver.py  frame_saver.py  turbojpeg_saver.py
dc_mod/: README.md  build.py  mod_dc_position.py
doc/: ARCHITECTURE.md  attach.md
docs/: ARCHITECTURE.md  DISTRIBUTED_SETUP.md  INSTALLATION.md  QUICKSTART.md  QUICK_DEPLOY_A.md  TROUBLESHOOTING.md  WHY_PLAN_A.md  WSL_SETUP.md  XMAKE_GUIDE.md
mod/: README.md  build.py  dc.logger_1.0.0.wotmod  mod_dc_logger.py
scripts/: sync_to_linux.bat  sync_to_linux.sh
src/: main_window.py
src/attack/: aim_controller.py  attack_module.py  fire_controller.py  main_view_detector.py  mouse_executor.py  target_selector.py
src/core/: __init__.py  actions.py  ai_controller.py  battle_task.py  global_context.py  state_machine.py  tank_selector.py  task_manager.py
src/gui/: debug_view.py
src/listeners/: __init__.py  global_listener.py  input_listener.py
src/navigation/: __init__.py  navigation_main.py
src/ui_control/: __init__.py  actions.py  matcher_pyautogui.py
src/utils/: __init_.py  angle_smoother.py  coordinate_utils.py  cut_minimap.py  global_context.py  imports.py  (+8 more)
tests/: test_binarizer.py  test_dwa_minimap.py  test_minimap_detection.py  test_path_plan.py  test_plan_path.py
train/: README.md  analyze_data.py  offline_replay.py  requirements.txt  run_inference.py  run_training.py  start_training.bat  test_model.py  train_config.yaml  train_imitation.py  train_imitation_refactored.py
train_yolo/: __init__.py  dataset_preprocessor.py  train_config.yaml  train_minimap_yolo.py
utest/: __init__.py  test_minimap_detection.py  test_path_plan.py  test_yolo_interface.py
wot_ai/: __init__.py  config.py  setup_directories.py
wot_client/: CAPTURE_MODES_EXPLAINED.md  CHANGELOG.md  CPP_BINDINGS_FIX.md  DATA_FORMAT.md  IMPROVEMENTS_SUMMARY.md  PERFORMANCE_GUIDE.md  QUICKSTART_RECORDING.md  README.md  README_USER.md  TROUBLESHOOTING.md  V0.3.1_RELEASE_NOTES.md  WINDOW_CAPTURE_GUIDE.md  __init__.py  client_main.py  config_gui.py  launcher.bat  record_main.py  requirements.txt  start_client.bat  start_recording.bat  test_capture.py  test_session_format.py  快捷键说明.txt
wot_client/cpp/: CMakeLists.txt
wot_client/cpp/bindings/: bindings.cpp
wot_client/cpp/include/: input_control.h  screen_capture.h
wot_client/cpp/input_control/: CMakeLists.txt  input_control.cpp
wot_client/cpp/screen_capture/: CMakeLists.txt  screen_capture.cpp  screen_capture_linux.cpp
wot_client/cpp/tests/: test_capture.cpp  test_input.cpp
wot_server/: COMPLETED_TASKS.md  README.md  README_IMITATION.md  SETUP_TRAINING.md  __init__.py  requirements.txt  server_main.py  start_server.sh  start_training.sh  train_imitation.bat  train_imitation.sh  train_main.py
yolo/: controller.py  demo_plan_path.py  gui.py  main.py
(+233 files in other folders)
