[tool.poetry]
name = "wot-robot"
version = "0.1.0"
description = "WoT Robot"
authors = ["Yone <1160158693@qq.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.9"
opencv-python = "*"
numpy = "1.26.4"
mss = "*"
pynput = "*"
loguru = "*"
ultralytics = ">=8.0.0"
pyinstaller = "*"
dearpygui = "*"
pyautogui = "*"
pydantic = "*"
psutil = "*"
pillow = "*"
pywin32 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

